--- a/pages/contact.html
+++ b/pages/contact.html
@@ -36,10 +36,14 @@
             <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="10000">
-                        <img src="../assets/images/fotos/whatsapp.png" class="d-block carousel-img-w" alt="...">
+                        <a href="https://wa.me/5491135561351">
+                                <img src="../assets/images/fotos/whatsapp.png" class="d-block carousel-img-w" alt="...">
+                        </a>
                     </div>
                     <div class="carousel-item" data-bs-interval="20000">
-                        <img src="../assets/images/fotos/LinkedIn.png" class="d-block carousel-img-l" alt="...">
+                        <a href="https://www.linkedin.com/in/rodrigo-hassan-b7a56521a/">
+                            <img src="../assets/images/fotos/LinkedIn.png" class="d-block carousel-img-l" alt="...">
+                        </a>
                     </div>
                     <div class="carousel-item">
                         <img src="../assets/images/fotos/instagram.png" class="d-block carousel-img-ig" alt="...">
