--- a/pages/contact.html
+++ b/pages/contact.html
@@ -46,7 +46,9 @@
                         </a>
                     </div>
                     <div class="carousel-item">
-                        <img src="../assets/images/fotos/instagram.png" class="d-block carousel-img-ig" alt="...">
+                        <a href="https://www.instagram.com/hassan_desu/?hl=es"> 
+                            <img src="../assets/images/fotos/instagram.png" class="d-block carousel-img-ig" alt="...">
+                        </a>
                     </div>
                 </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
