--- a/pages/contact.html
+++ b/pages/contact.html
@@ -65,7 +65,7 @@
         
   
     <footer class="text-start ps-4 mt-5 mb-3">
-        <p>&copy; Comisión 73350 - Todos los derechos reservado</p>
+        <p>&copy; Comisión 73350 - Todos los derechos reservados</p>
     </footer>
         
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
