--- a/pages/contact.html
+++ b/pages/contact.html
@@ -46,7 +46,7 @@
                         </a>
                     </div>
                     <div class="carousel-item">
-                        <a href="https://www.instagram.com/hassan_desu/?hl=es"> 
+                        <a href="https://www.instagram.com/hassan_desu/"> 
                             <img src="../assets/images/fotos/instagram.png" class="d-block carousel-img-ig" alt="...">
                         </a>
                     </div>
