--- a/pages/skills.html
+++ b/pages/skills.html
@@ -25,38 +25,61 @@
             </div>
         </nav>
     </header>
-        <main class="container" style="padding-top: 100px;">
+    <main class="container" style="padding-top: 100px;">
             <div class="row align-items-center">
                 <!-- Texto -->
                 <div class="col-12 col-md-6 text-center text-md-start">
                     <h4>Skills</h4>
                 </div>
-            <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="10000">
-                        <img src="../assets/images/certificaciones/bits.JPG" class="d-block carousel-img" alt="...">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="20000">
-                        <img src="../assets/images/certificaciones/soporte.JPG" class="d-block carousel-img" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../assets/images/certificaciones/Programacion.jpg" class="d-block carousel-img" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../assets/images/certificaciones/reparacion.JPG" class="d-block carousel-img" alt="...">
+                <h1 class="text-center mb-5">Mis Habilidades y Certificados</h1>
+        <div class="row align-items-center">
+
+            <div class="col-md-6 mb-4">
+                <div class="card shadow-sm p-4 h-100">
+                    <h2 class="text-center mb-4">Habilidades Técnicas</h2>
+                    <ul class="list-unstyled">
+                        <li class="mb-2 fs-5">Conocimientos en monitoreo</li>
+                        <li class="mb-2 fs-5">Manejo de herramientas como Dynatrace y Datadog</li>
+                        <li class="mb-2 fs-5">Experiencia en metodologías ágiles</li>
+                        <li class="mb-2 fs-5">Reparación de computadoras</li>
+                        <li class="mb-2 fs-5">Instalación de softwares</li>
+                        <li class="mb-2 fs-5">Realización de backups</li>
+                        <li class="mb-2 fs-5">Experiencia en microinformática</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-6 mb-4">
+                <div class="card shadow-sm p-3">
+                    <h2 class="text-center mb-4">Certificados</h2>
+                    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active" data-bs-interval="10000">
+                                <img src="../assets/images/certificaciones/bits.JPG" class="d-block w-100 carousel-img" alt="Certificado de Bits">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="20000">
+                                <img src="../assets/images/certificaciones/soporte.JPG" class="d-block w-100 carousel-img" alt="Certificado de Soporte">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../assets/images/certificaciones/Programacion.jpg" class="d-block w-100 carousel-img" alt="Certificado de Programación">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../assets/images/certificaciones/reparacion.JPG" class="d-block w-100 carousel-img" alt="Certificado de Reparación">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
                 </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
             </div>
-            </div>
-        </main> 
+
+        </div>
+    </main> 
        
     <footer class="text-start ps-4 mt-5 mb-3">
         <p>&copy; Comisión 73350 - Todos los derechos reservados</p>
