correccion en la imagen de contacto

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -74,7 +74,7 @@
                 </div>
             </div>
         </div>
-        <img src="../assets/images/fotos/keanu.jpg" class="card-img-top img-fluid">
+        <img src="../assets/images/fotos/keanu.jpg" class="img-keanu img-fluid">
     </main>     
         
   
