--- a/pages/projects.html
+++ b/pages/projects.html
@@ -36,7 +36,9 @@
                     <img src="../assets/images/fotos/platos.png" class="card-img-top img-fluid" alt="Imagen de Cafetería la Once">
                     <div class="card-body">
                         <h5 class="card-title">Cafetería la Once</h5>
-                        <p class="card-text">Restaurante y emprendimiento familiar.</p>
+                        <p class="card-text">Restaurante y emprendimiento familiar.
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque eligendi, quos optio adipisci rerum aliquid laudantium sequi ipsum impedit, dicta labore quo deleniti repudiandae fugit omnis nobis debitis ipsa pariatur.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -46,7 +48,10 @@
                     <img src="../assets/images/fotos/mmo.JPG" class="card-img-top img-fluid" alt="Captura de pantalla del juego MMORPG">
                     <div class="card-body">
                         <h5 class="card-title">Juego</h5>
-                        <p class="card-text">Actualmente en fase inicial, un MMORPG.</p>
+                        <p class="card-text">Actualmente en fase inicial, un MMORPG.
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure earum nemo tempore vel iste quo ducimus numquam quaerat quia, molestiae voluptatem veritatis ab doloribus, velit exercitationem sunt eum esse quis.
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum inventore laborum aliquid dignissimos perferendis rem atque ipsum numquam quasi optio veritatis, harum corporis soluta alias ex quaerat possimus est distinctio.
+                        </p>
                     </div>
                 </div>
             </div>
