--- a/pages/contact.html
+++ b/pages/contact.html
@@ -30,7 +30,7 @@
         <main class="container py-5 mt-5">
         <div class="col-md-4">
             <h1 class="display-4">Contacto</h1>
-            <p class="lead mt-3">Puedes contactarme a través de los siguientes medios.</p>
+            <h2 class="lead mt-3">Puedes contactarme a través de los siguientes medios.</h2>
         </div>
         
         <div class="row justify-content-center">
