--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <div class="row align-items-center">
         <div class="col-12 col-md-6 text-center text-md-start">
       <!-- Texto -->
-        <h4 class="text-uppercase">Portafolio</h4>
-        <h1 class="fw-bold display-3">Hassan<br>Rodrigo</h1>
-        <p class="text-uppercase">Desarrollador Web<br>Front / Back</p>
+        <h1 class="text-uppercase">Portafolio</h1>
+        <h2 class="fw-bold display-3">Hassan<br>Rodrigo</h2>
+        <h4 class="text-uppercase">Desarrollador Web<br>Front / Back</h4>
       </div>
 
       <!-- Imagen -->
